<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Belanja Yuk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close"
            tools:ignore="ExtraTranslation">Close navigation drawer
    </string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Keranjang">Keranjang</string>
    <string name="Akun">Akun</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="orderan_saya">Orderan Saya</string>
    <string name="keranjang">Keranjang</string>
    <string name="others">Others</string>
    <string name="title">Cari di belanja yuk ?</string>
    <string name="belanja_yuk">Belanja Yuk</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_yet">Already have an account yet ?</string>
    <string name="register_here">Register Here</string>
    <string name="login_here">Login Here</string>
    <string name="remember_me">Remember Me</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="empty_data">Data tidak ada</string>
    <string name="coba_lagi_ya">Coba lagi ya</string>
    <string name="tambahkan_ke_keranjang">tambahkan ke keranjang</string>
    <string name="list_categories">List Categories</string>
    <string name="barang_ada">Barang Ada</string>
    <string name="tanggal">Tanggal</string>
    <string name="nama_category">Nama Category</string>
    <string name="nama_detail_category">Nama Detail Category</string>

</resources>
