<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_cart"
                android:title="@string/keranjang"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_histroy"
                android:title="@string/orderan_saya"/>

    </group>

    <item android:title="@string/others">
        <menu>
            <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/Akun"/>
        </menu>
    </item>

</menu>
