<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:id="@+id/linear"
            android:orientation="vertical"
            tools:context=".ui.login.Login"
            tools:ignore="ScrollViewSize">

        <TextView
                android:text="@string/login_here"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:id="@+id/loginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="20dp"
                tools:ignore="ObsoleteLayoutParam">

            <EditText
                    android:id="@+id/edt_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/auth_et_vertical_margin"
                    android:drawablePadding="5dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@android:color/white"
                    android:paddingHorizontal="@dimen/auth_et_horizontal_padding"
                    android:paddingVertical="@dimen/auth_et_vertical_padding"
                    android:textSize="@dimen/et_text_size"
                    tools:ignore="Autofill,UnusedAttribute"/>

            <EditText
                    android:id="@+id/edt_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/auth_et_vertical_margin"
                    android:drawablePadding="5dp"
                    android:hint="@string/password"
                    android:textColorHint="@android:color/white"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/auth_et_horizontal_padding"
                    android:paddingVertical="@dimen/auth_et_vertical_padding"
                    android:textSize="@dimen/et_text_size"
                    tools:ignore="Autofill,UnusedAttribute"/>

            <CheckBox
                    android:id="@+id/cb_remember_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/auth_et_vertical_margin"
                    android:backgroundTint="@android:color/white"
                    android:buttonTint="@android:color/white"
                    android:text="@string/remember_me"
                    android:textColor="@android:color/white"
                    tools:ignore="UnusedAttribute"/>

            <Button
                    android:id="@+id/btn_sign_in"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/auth_et_vertical_margin"
                    android:elevation="0dp"
                    android:text="@string/sign_in"
                    android:clickable="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp"
                    tools:ignore="UnusedAttribute">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_account"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"/>

                <TextView
                        android:id="@+id/tv_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/sign_up"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
